data/derived/fa15/progs/unify/prog1097.ml.out
Characters 77-83:
  let revstr = listReverse (explode w) in if checkSame (w, revstr) then true else false 
                                                           ^^^^^^
Error: This expression has type char list
       but an expression was expected of type string
